--- a/SoulTunes/src/soultunes/MusicPlayer.fxml
+++ b/SoulTunes/src/soultunes/MusicPlayer.fxml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soultunes.MusicPlayerController">
-    
+<AnchorPane id="AnchorPane" prefHeight="426.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="soultunes.MusicPlayerController">
+    <children>
+      <Slider fx:id="trackSlider" disable="true" layoutX="77.0" layoutY="392.0" max="30.0" prefHeight="14.0" prefWidth="458.0" />
+      <ImageView fx:id="albumCover" fitHeight="256.0" fitWidth="256.0" layoutX="14.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true" />
+      <TableView fx:id="tracksTableView" layoutX="277.0" layoutY="149.0" prefHeight="224.0" prefWidth="342.0">
+        <columns>
+          <TableColumn maxWidth="30.0" prefWidth="28.0" resizable="false" text="#" />
+          <TableColumn maxWidth="500.0" minWidth="50.0" prefWidth="313.0" text="Title" />
+        </columns>
+      </TableView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="107.0" layoutX="14.0" layoutY="5.0" stroke="BLACK" strokeType="INSIDE" width="606.0" />
+      <Label fx:id="artistLabel" layoutX="22.0" layoutY="14.0" prefHeight="53.0" prefWidth="458.0">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Label>
+      <ProgressIndicator fx:id="progress" layoutX="520.0" layoutY="25.0" prefHeight="77.0" prefWidth="99.0" visible="false" />
+      <Label fx:id="albumLabel" layoutX="22.0" layoutY="67.0" prefHeight="27.0" prefWidth="465.0" textFill="#000000a9">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="searchField" layoutX="307.0" layoutY="117.0" onKeyPressed="#onEnter" prefHeight="25.0" prefWidth="283.0" promptText="Search for artist..." />
+      <Button fx:id="previousAlbumButton" disable="true" layoutX="278.0" layoutY="117.0" mnemonicParsing="false" onAction="#previousAlbum" prefHeight="25.0" prefWidth="25.0" text="&lt;" />
+      <Button fx:id="nextAlbumButton" disable="true" layoutX="593.0" layoutY="117.0" mnemonicParsing="false" onAction="#nextAlbum" prefHeight="25.0" prefWidth="25.0" text="&gt;" />
+      <Button fx:id="genPlayButton" layoutX="14.0" layoutY="386.0" mnemonicParsing="false" onAction="#playPauseMusic" prefHeight="25.0" prefWidth="52.0" text="Play" />
+      <Label fx:id="songTimeLabel" alignment="CENTER_RIGHT" layoutX="536.0" layoutY="391.0" prefHeight="17.0" prefWidth="30.0" text="0:00" />
+      <Label fx:id="songLengthLabel" layoutX="571.0" layoutY="391.0" prefHeight="17.0" prefWidth="45.0" text="/ 0:00" />
+    </children>
 </AnchorPane>
