--- a/SoulTunes/src/soultunes/MusicPlayer.fxml
+++ b/SoulTunes/src/soultunes/MusicPlayer.fxml
@@ -29,7 +29,7 @@
          </font>
       </Label>
       <ProgressIndicator fx:id="progress" layoutX="520.0" layoutY="25.0" prefHeight="77.0" prefWidth="99.0" visible="false" />
-      <Label fx:id="albumLabel" layoutX="29.0" layoutY="67.0" prefHeight="27.0" prefWidth="458.0" textFill="#bbbbbba8">
+      <Label fx:id="albumLabel" layoutX="29.0" layoutY="67.0" prefHeight="27.0" prefWidth="458.0" textFill="#f9f9f9a8">
          <font>
             <Font size="18.0" />
          </font>
@@ -42,5 +42,9 @@
       <Label fx:id="songLengthLabel" layoutX="571.0" layoutY="391.0" prefHeight="17.0" prefWidth="45.0" text="/ 0:00" />
       <ImageView fx:id="weatherStatus" fitHeight="305.0" fitWidth="598.0" layoutX="19.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="playWeatherTuneButton" layoutX="27.0" layoutY="339.0" mnemonicParsing="false" onAction="#playWeatherMusic" prefHeight="27.0" prefWidth="235.0" text="Play Current Weather Playlist" />
+      <Label fx:id="weatherInfo" layoutX="26.0" layoutY="280.0" prefHeight="53.0" prefWidth="235.0" textFill="#e5e5e5">
+         <font>
+            <Font name="Arial" size="14.0" />
+         </font></Label>
     </children>
 </AnchorPane>
